[package]
name = "go-heap-rs"
version = "0.1.1"
edition = "2018"
license = "MIT"
keywords = ["data-structures", "heap"]
description = "Golang's heap written in Rust"
readme = "README.md"
repository = "https://github.com/HirbodBehnam/go-heap-rs"
categories = ["data-structures"]

[dependencies]

[dev-dependencies]
rand = "0.8.0"